LFPO : showing full terminal names (ORLY 1 instead of 1)
LFRK : added gates, update taxiway H1, removed taxiway B1
LFTW : Removed SN, added CS, SG, PA, BG, CZ, RD and UH (VFR report points)

**********************
SCT
**********************

LFME : added coordinates and runways for display on APP
LFNR : added coordinates and runways for display on APP

TMA Lyon : updated sector shapes
TMA Montpellier : fixed typo, remove sector 24
TMA Nantes : updated sector shapes
TMA Provence : updated sector shapes
TMA Rodez : removed

CTR LFAQ : updated sector shape
CTR LFCR : updated sector shape
CTR LFMD : updated sector shapes
CTR LFRS : updated sector shape, removed CTR2
CTR LFTW : updated sector shape

LF R35A/R35B PARIS SACLAY VERSAILLES : added for controling LFPN TWR


Note: Groundlayout AVISO display lines such as stand lines, REGIONNAME AVISO displays shapes and hold lines for GND view

LFBZ : updated Groundlayout AVISO with new Apron A layout, updated REGIONNAME AVISO layout
LFCR : added Groundlayout AVISO
LFKF : updated Groundlayout AVISO with stand 12B
LFLG : added Groundlayout AVISO and REGIONNAME AVISO
LFLS : added Groundlayout AVISO and REGIONNAME AVISO
LFMK : updated REGIONNAME AVISO to match color standards of other platforms
LFML : removed non-existing building
LFMU : added Groundlayout AVISO and REGIONNAME AVISO
LFPG : added Groundlayout AVISO Lite, Groundlayout AVISO V3 and REGIONNAME AVISO V3
LFRK : added Groundlayout AVISO and REGIONNAME AVISO
LFSB : fixed typo in name
LFTH : added Groundlayout AVISO and REGIONNAME AVISO