@@ -2769,7 +2769,151 @@
  N048.43.56.717:E002.22.27.619:LFPO Gates:TERMINAL
  N048.43.57.552:E002.22.32.712:LFPO Gates:FRET
  N048.44.40.613:E002.22.26.818:LFPO Gates:HANGAR N2
-@@ -42007,9 +41788,12 @@
+@@ -41629,43 +41410,58 @@
+ N050.34.08.096:E003.05.42.955:LFQQ Gates:Aviation Generale
+ N050.34.26.242:E003.05.38.970:LFQQ Gates:H
+ N050.34.23.110:E003.05.40.522:LFQQ Gates:Parking E
+-N050.34.13.108:E003.06.08.288:LFQQ Gates:B01
+-N050.34.13.375:E003.06.10.147:LFQQ Gates:B02
+-N050.34.13.726:E003.06.12.286:LFQQ Gates:B03
+-N050.34.17.516:E003.06.16.108:LFQQ Gates:B04
+-N050.34.16.498:E003.06.16.159:LFQQ Gates:B05
+-N050.34.14.378:E003.06.16.385:LFQQ Gates:B06
+-N050.34.15.012:E003.06.19.085:LFQQ Gates:B07
+-N050.34.15.146:E003.06.20.918:LFQQ Gates:B08
+-N050.34.15.447:E003.06.22.700:LFQQ Gates:B09
+-N050.34.15.831:E003.06.24.101:LFQQ Gates:B10
+-N050.34.16.048:E003.06.25.807:LFQQ Gates:B11
+-N050.34.16.165:E003.06.27.284:LFQQ Gates:B12
+-N050.34.16.248:E003.06.28.532:LFQQ Gates:B13
+-N050.34.17.217:E003.06.29.347:LFQQ Gates:B14
+-N050.34.16.616:E003.06.31.027:LFQQ Gates:B15
+-N050.34.16.748:E003.06.32.201:LFQQ Gates:B16
+-N050.34.16.848:E003.06.33.118:LFQQ Gates:B17
+-N050.34.07.630:E003.05.53.118:LFQQ Gates:C1
+-N050.34.06.851:E003.05.53.405:LFQQ Gates:C2
+-N050.34.06.063:E003.05.53.672:LFQQ Gates:C3
+-N050.34.05.280:E003.05.53.912:LFQQ Gates:C4
+-N050.34.04.494:E003.05.54.175:LFQQ Gates:C5
+-N050.34.07.128:E003.05.50.411:LFQQ Gates:C6
+-N050.34.06.215:E003.05.50.727:LFQQ Gates:C7
+-N050.34.05.302:E003.05.51.024:LFQQ Gates:C8
+-N050.34.04.383:E003.05.51.334:LFQQ Gates:C9
+-N050.34.05.696:E003.05.46.576:LFQQ Gates:C10
+-N050.34.04.840:E003.05.43.607:LFQQ Gates:C11
+-N050.34.04.093:E003.05.42.271:LFQQ Gates:C12
+-N050.34.04.845:E003.05.40.764:LFQQ Gates:C13
+-N050.34.14.484:E003.06.53.618:LFQQ Gates:D01
+-N050.34.15.123:E003.06.53.412:LFQQ Gates:D02
+-N050.34.15.754:E003.06.53.195:LFQQ Gates:D03
+-N050.34.13.998:E003.06.56.907:LFQQ Gates:D04
+-N050.34.14.976:E003.06.56.583:LFQQ Gates:D05
+-N050.34.15.956:E003.06.56.239:LFQQ Gates:D06
+-N050.34.16.188:E003.06.59.799:LFQQ Gates:D07
++N050.34.13.082:E003.06.07.961:LFQQ Gates:B01
++N050.34.13.425:E003.06.10.270:LFQQ Gates:B02
++N050.34.13.721:E003.06.12.362:LFQQ Gates:B03
++N050.34.14.040:E003.06.14.418:LFQQ Gates:B04
++N050.34.14.383:E003.06.16.546:LFQQ Gates:B06
++N050.34.15.046:E003.06.19.504:LFQQ Gates:B07
++N050.34.15.271:E003.06.21.254:LFQQ Gates:B08
++N050.34.15.448:E003.06.22.390:LFQQ Gates:B09
++N050.34.15.862:E003.06.24.248:LFQQ Gates:B10
++N050.34.16.051:E003.06.25.871:LFQQ Gates:B11
++N050.34.16.241:E003.06.27.007:LFQQ Gates:B12
++N050.34.16.477:E003.06.28.667:LFQQ Gates:B13
++N050.34.16.631:E003.06.29.767:LFQQ Gates:B14
++N050.34.16.300:E003.06.30.759:LFQQ Gates:B15
++N050.34.16.761:E003.06.32.274:LFQQ Gates:B16
++N050.34.16.880:E003.06.33.085:LFQQ Gates:B17
++N050.34.07.778:E003.05.53.081:LFQQ Gates:C1W
++N050.34.07.447:E003.05.53.208:LFQQ Gates:C1E
++N050.34.06.974:E003.05.53.316:LFQQ Gates:C2W
++N050.34.06.690:E003.05.53.460:LFQQ Gates:C2E
++N050.34.06.193:E003.05.53.604:LFQQ Gates:C3W
++N050.34.05.921:E003.05.53.731:LFQQ Gates:C3E
++N050.34.05.448:E003.05.53.893:LFQQ Gates:C4W
++N050.34.05.140:E003.05.54.019:LFQQ Gates:C4E
++N050.34.04.632:E003.05.54.182:LFQQ Gates:C5W
++N050.34.04.371:E003.05.54.308:LFQQ Gates:C5E
++N050.34.07.282:E003.05.50.322:LFQQ Gates:C6W
++N050.34.06.974:E003.05.50.448:LFQQ Gates:C6E
++N050.34.06.359:E003.05.50.665:LFQQ Gates:C7W
++N050.34.06.075:E003.05.50.809:LFQQ Gates:C7E
++N050.34.05.495:E003.05.50.971:LFQQ Gates:C8W
++N050.34.05.140:E003.05.51.116:LFQQ Gates:C8E
++N050.34.04.572:E003.05.51.242:LFQQ Gates:C9W
++N050.34.04.217:E003.05.51.422:LFQQ Gates:C9E
++N050.34.05.389:E003.05.47.167:LFQQ Gates:C10
++N050.34.04.991:E003.05.44.267:LFQQ Gates:C11
++N050.34.03.647:E003.05.42.969:LFQQ Gates:C12
++N050.34.04.613:E003.05.41.309:LFQQ Gates:C13
++N050.34.14.305:E003.06.53.454:LFQQ Gates:D01W
++N050.34.14.635:E003.06.53.757:LFQQ Gates:D01E
++N050.34.14.926:E003.06.53.232:LFQQ Gates:D02W
++N050.34.15.274:E003.06.53.557:LFQQ Gates:D02E
++N050.34.15.589:E003.06.53.003:LFQQ Gates:D03W
++N050.34.15.904:E003.06.53.350:LFQQ Gates:D03E
++N050.34.13.680:E003.06.56.497:LFQQ Gates:D04W
++N050.34.14.286:E003.06.57.266:LFQQ Gates:D04E
++N050.34.14.664:E003.06.56.157:LFQQ Gates:D05W
++N050.34.15.231:E003.06.56.985:LFQQ Gates:D05E
++N050.34.15.652:E003.06.55.825:LFQQ Gates:D06W
++N050.34.16.258:E003.06.56.608:LFQQ Gates:D06E
++N050.34.15.638:E003.06.59.282:LFQQ Gates:D07W
++N050.34.16.733:E003.07.00.546:LFQQ Gates:D07E
+ ;============================================== ~~ LFFF/LFQQ/Points VFR ~~ ===============================================;
+ N050.31.06.000:E003.08.01.000:LFQQ Points VFR:SA
+ N050.28.16.000:E003.13.40.000:LFQQ Points VFR:SE
+@@ -41674,29 +41470,24 @@
+ N050.31.22.000:E002.47.35.000:LFQQ Points VFR:W
+ N050.36.11.000:E003.06.48.000:LFQQ Points VFR:NG
+ ;=============================================== ~~ LFFF/LFQQ/Taxiways ~~ ================================================;
+-N050.34.08.256:E003.06.42.397:LFQQ Taxiways:P2
+-N050.34.02.490:E003.06.02.173:LFQQ Taxiways:P3
+-N050.33.58.699:E003.05.35.627:LFQQ Taxiways:P4
+-N050.33.58.186:E003.05.21.577:LFQQ Taxiways:P5
+-N050.34.06.451:E003.06.55.504:LFQQ Taxiways:T2
+-N050.34.02.132:E003.06.26.119:LFQQ Taxiways:T3
+-N050.33.55.884:E003.05.43.864:LFQQ Taxiways:T4
+-N050.33.52.876:E003.05.23.708:LFQQ Taxiways:T5
+-N050.34.10.941:E003.06.56.820:LFQQ Taxiways:V1
+-N050.34.08.769:E003.06.25.984:LFQQ Taxiways:V2
+-N050.34.06.637:E003.06.11.747:LFQQ Taxiways:V3
+-N050.34.01.661:E003.05.49.988:LFQQ Taxiways:V4
+-N050.34.00.990:E003.05.44.766:LFQQ Taxiways:V5
+-N050.33.55.530:E003.05.12.756:LFQQ Taxiways:X
+-N050.33.54.258:E003.05.03.853:LFQQ Taxiways:X
+-N050.33.51.909:E003.04.58.531:LFQQ Taxiways:X
+-N050.33.49.625:E003.04.59.029:LFQQ Taxiways:X
+-N050.33.43.884:E003.05.01.217:LFQQ Taxiways:X
+-N050.33.39.610:E003.05.02.858:LFQQ Taxiways:X
+-N050.33.36.902:E003.05.05.594:LFQQ Taxiways:X
+-N050.33.35.565:E003.05.10.667:LFQQ Taxiways:X
+-N050.33.48.386:E003.05.27.925:LFQQ Taxiways:X
+-N050.33.57.448:E003.06.30.141:LFQQ Taxiways:X
++N050.34.09.446:E003.06.41.744:LFQQ Taxiways:P2
++N050.34.03.354:E003.06.02.458:LFQQ Taxiways:P3
++N050.34.00.014:E003.05.34.938:LFQQ Taxiways:P4
++N050.33.58.119:E003.05.21.521:LFQQ Taxiways:P5
++N050.34.07.822:E003.06.55.298:LFQQ Taxiways:T2
++N050.34.03.715:E003.06.25.782:LFQQ Taxiways:T3
++N050.33.57.668:E003.05.42.919:LFQQ Taxiways:T4
++N050.33.55.501:E003.05.27.989:LFQQ Taxiways:T5
++N050.34.12.651:E003.06.56.950:LFQQ Taxiways:V1
++N050.34.08.634:E003.06.24.613:LFQQ Taxiways:V2
++N050.34.06.423:E003.06.09.958:LFQQ Taxiways:V3
++N050.34.02.045:E003.05.48.010:LFQQ Taxiways:V4
++N050.34.01.278:E003.05.42.506:LFQQ Taxiways:V5
++N050.34.23.721:E003.05.30.615:LFQQ Taxiways:V6
++N050.34.25.292:E003.05.31.178:LFQQ Taxiways:V7
++N050.34.23.097:E003.05.35.018:LFQQ Taxiways:V8
++N050.34.25.338:E003.05.32.552:LFQQ Taxiways:E
++N050.34.23.028:E003.05.32.693:LFQQ Taxiways:F
+ ;================================================= ~~ LFFF/LFQT/Gates ~~ =================================================;
+ N050.37.35.300:E002.38.48.400:LFQT Gates:1
+ N050.37.36.100:E002.38.49.200:LFQT Gates:2
+@@ -42007,9 +41798,12 @@
  N047.33.42.989:W000.18.31.691:LFRJ Taxiways:C
  N047.33.33.490:W000.18.44.476:LFRJ Taxiways:S
  ;================================================= ~~ LFRR/LFRK/Gates ~~ =================================================;
@@ -2785,7 +2929,7 @@
  N049.10.53.814:W000.27.35.066:LFRK Gates:Parking Herbe
  N049.11.00.057:W000.27.34.632:LFRK Gates:Terminal
  N049.10.56.282:W000.27.26.554:LFRK Gates:TWR
-@@ -42024,40 +41808,6 @@
+@@ -42024,40 +41818,6 @@
  N049.04.41.000:W000.38.29.000:LFRK Points VFR:SW
  N049.11.37.000:W000.51.52.000:LFRK Points VFR:W
  ;=============================================== ~~ LFRR/LFRK/Taxiways ~~ ================================================;
@@ -2826,7 +2970,7 @@
  N049.10.48.454:W000.27.45.892:LFRK Taxiways:A1
  N049.10.55.431:W000.27.32.807:LFRK Taxiways:A
  N049.10.51.310:W000.27.31.005:LFRK Taxiways:H
-@@ -42065,8 +41815,23 @@
+@@ -42065,8 +41825,23 @@
  N049.10.40.844:W000.27.08.240:LFRK Taxiways:H
  N049.10.32.656:W000.26.53.764:LFRK Taxiways:H3
  N049.10.44.361:W000.27.19.379:LFRK Taxiways:H2
@@ -2852,7 +2996,7 @@
  ;================================================= ~~ LFRR/LFRN/AMSR ~~ ==================================================;
  N048.39.32.140:W002.19.22.003:LFRN AMSR:2000
  N048.17.02.140:W001.59.37.003:LFRN AMSR:2700
-@@ -42920,7 +42685,13 @@
+@@ -42920,7 +42695,13 @@
  N043.49.49.000:E004.38.00.000:LFTW Points VFR:BC
  N043.39.59.000:E004.35.15.000:LFTW Points VFR:AL
  N043.40.55.000:E004.12.50.000:LFTW Points VFR:AS
